# DPlusPlus

./: .gitignore  CMakeLists.txt  README.md
DPlusPlus/: DPlusPlus.vcxproj  DPlusPlus.vcxproj.filters  Guild.cpp  MessageBulkDeleteEventArgs.cpp  MessageCreateEventArgs.cpp  MessageCreateEventArgs.h  MessageDeleteEventArgs.cpp  MessageReactionAddEventArgs.cpp  main.cpp
DPlusPlus/Include/: Discord.h  Globals.h  Intents.h  Library.h  Log.h
DPlusPlus/Include/Channel/: Channel.h  Channel​Create​Event​Args.h  Channel​Delete​Event​Args.h  Channel​Pins​Update​Event​Args.h  Channel​Update​Event​Args.h
DPlusPlus/Include/Embed/: Embed.h  EmbedAuthor.h  EmbedFooter.h  EmbedImage.h  EmbedProvider.h  EmbedThumbnail.h  EmbedVideo.h
DPlusPlus/Include/Emoji/: Emoji.h
DPlusPlus/Include/Guild/: Guild.h  Guild​Ban​Add​Event​Args.h  Guild​Integrations​Update​Event​Args.h
DPlusPlus/Include/Member/: Member.h
DPlusPlus/Include/Message/: Message.h  MessageBulkDeleteEventArgs.h  MessageDeleteEventArgs.h  MessageReactionAddEventArgs.h  Message​Reaction​Remove​Emoji​Event​Args.h  Message​Update​Event​Args.h
DPlusPlus/Include/Other/: Globals.h  Snowflake.h
DPlusPlus/Include/User/: User.h
DPlusPlus/Src/: Discord.cpp  DiscordVirtuals.cpp  Globals.cpp  Intents.cpp  Log.cpp
DPlusPlus/Src/Channel/: Channel.cpp  Channel​Create​Event​Args.cpp  Channel​Delete​Event​Args.cpp  Channel​Pins​Update​Event​Args.cpp  Channel​Update​Event​Args.cpp
DPlusPlus/Src/Embed/: Embed.cpp  EmbedAuthor.cpp  EmbedFooter.cpp  EmbedImage.cpp  EmbedProvider.cpp  EmbedThumbnail.cpp  EmbedVideo.cpp
(+163 files in other folders)
